# amaes

./: .gitignore  README.md  pyproject.toml
src/: evaluator.py  pretrain.py  train.py
src/augmentations/: augmentation_composer.py  finetune_augmentation_presets.py  mask.py
src/data/: datamodule.py  dataset.py  pretrain_split.py
src/models/: self_supervised.py  supervised.py
src/models/conv_blocks/: blocks.py  layers.py
src/models/networks/: __init__.py  mednext.py  unet.py
src/utils/: data_split.py  masking.py
